fixed to do list item/checkbox/edit link spacing issue

--- a/public/assets/styles.css
+++ b/public/assets/styles.css
@@ -6,7 +6,7 @@ body{
 
 #todo-table{
     position: relative;
-    width: 95%;
+    width: 100%;
     background: #090d13;
     margin: 0 auto;
     padding: 20px;
@@ -48,17 +48,12 @@ ul{
     margin: 0;
 }
 
-li{
-    width: 100%;
-    padding: 10px;
-    box-sizing: border-box;
-    font-family: arial;
-    font-size: 20px;
-    cursor: pointer;
-    letter-spacing: 1px;
+.todo-text{
+  margin-right: 10px;
+  margin-left: 5px;
 }
 
-.strikeable:hover{
+.todo-text:hover{
     text-decoration: line-through;
     background: rgba(0,0,0,0.2);
 }
@@ -69,11 +64,7 @@ h1{
     text-indent: -10000px;
 }
 
-.edit-item{
-  display:block;
-}
-
-.todo-list{
+.todo-item{
   width: 100%;
   padding: 10px;
   box-sizing: border-box;
@@ -81,4 +72,6 @@ h1{
   font-size: 20px;
   cursor: pointer;
   letter-spacing: 1px;
+  display: flex;
+  clear:left;
 }
